<resources>
    <string name="app_name">MercadoLibreDev</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_search">Search</string>
    <string name="free_shipping">Envío gratis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_">Nuevo</string>
    <string name="old">Usado</string>
    <string name="en">en</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="comprar_ahora">Comprar ahora</string>
</resources>