<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".detail.SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/txtSold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:gravity="center"
                android:textColor="@color/actionbar_text"
                android:textSize="16sp"
                tools:ignore="InefficientWeight" />

            <ImageView
                android:id="@+id/imgProductDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/splash_image" />

            <TextView
                android:id="@+id/textPreci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/actionbar_text"
                android:textSize="27sp" />


            <LinearLayout
                android:id="@+id/installmentsLiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0"
                    android:text="@string/en"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtInstallments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textColor="@color/colorEnvioGratis"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buy"
                    android:textColor="@android:color/white"
                    android:background="@drawable/background_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comprar_ahora" />

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/Add"
                    android:background="@drawable/button_press"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_al_carrito" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoSeller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/caracteristicas"
                    android:textColor="@color/actionbar_text"
                    android:textSize="16sp"
                    tools:ignore="InefficientWeight" />

                <LinearLayout
                    android:id="@+id/addfeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>